--- a/README.org
+++ b/README.org
@@ -62,6 +62,11 @@ Just install from MELPA, then bind the commands and customize the =scrollkeeper=
 :TOC:      0
 :END:
 
+** 0.1.1
+
+*Fixed*
++  Face spec in ~scrollkeeper--thinline~ function.
+
 ** 0.1
 
 Initial release.
